[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/SyncControls/SyncControlReset.png" type="Texture" id=1]
[ext_resource path="res://UI/SyncControls/SyncControls.gd" type="Script" id=2]
[ext_resource path="res://UI/SyncControls/SyncControlStop.png" type="Texture" id=3]
[ext_resource path="res://UI/SyncControls/SyncControlStart.png" type="Texture" id=4]
[ext_resource path="res://UI/SyncControls/SyncControlDisabled.png" type="Texture" id=5]
[ext_resource path="res://UI/SyncControls/SyncControlResetDisabled.png" type="Texture" id=6]
[ext_resource path="res://UI/SyncControls/SyncControlPause.png" type="Texture" id=7]
[ext_resource path="res://Resources/Audio/SFX/StartStopPhysicsButton.wav" type="AudioStream" id=8]
[ext_resource path="res://Resources/Fonts/BRLNSDB.TTF" type="DynamicFontData" id=9]
[ext_resource path="res://UI/SyncControls/StartButtonLabel.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 9 )

[node name="SyncControls" type="HBoxContainer"]
pause_mode = 2
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -96.0
margin_right = 201.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartStopPhysicsButtonASP" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -15.0
bus = "Effects"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 65.0
margin_bottom = 128.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 65.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 1 )
text = "Pause
[P]"
align = 1

[node name="PauseButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 63.0
margin_right = 65.0
margin_bottom = 127.0
focus_mode = 0
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 69.0
margin_right = 133.0
margin_bottom = 128.0

[node name="Label2" type="Label" parent="VBoxContainer2"]
margin_right = 64.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 1 )
text = "Reset
[R]"
align = 1

[node name="ResetButton" type="TextureButton" parent="VBoxContainer2"]
pause_mode = 1
margin_top = 63.0
margin_right = 64.0
margin_bottom = 127.0
focus_mode = 0
texture_normal = ExtResource( 1 )
texture_disabled = ExtResource( 6 )

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
margin_left = 137.0
margin_right = 217.0
margin_bottom = 128.0

[node name="Label3" type="Label" parent="VBoxContainer3"]
margin_right = 80.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
text = "Start"
align = 1
script = ExtResource( 10 )

[node name="Label4" type="Label" parent="VBoxContainer3"]
margin_top = 32.0
margin_right = 80.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "[Space]"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer3"]
margin_top = 64.0
margin_right = 80.0
margin_bottom = 128.0
alignment = 1

[node name="StartButton" type="TextureButton" parent="VBoxContainer3/HBoxContainer"]
pause_mode = 1
margin_left = 8.0
margin_right = 72.0
margin_bottom = 64.0
focus_mode = 0
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 5 )
[connection signal="pressed" from="VBoxContainer/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="VBoxContainer2/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="toggled" from="VBoxContainer3/HBoxContainer/StartButton" to="." method="_on_StartButton_toggled"]
